--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kacperski81.github.io/klaudia-portfolio2/",
+  "homepage": "https://klaudia102.github.io/klaudia-portfolio-react/",
   "name": "portfolio",
   "private": true,
   "version": "0.0.0",
